kubernetes/deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoco-frontend-prod
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yoco-frontend-prod
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yoco-frontend-prod
    spec:
      containers:
        - image: gcr.io/rytzee/yoco-frontend-prod
          imagePullPolicy: IfNotPresent
          name: yoco-frontend-prod
          ports:
            - containerPort: 4000
              protocol: TCP
---
  apiVersion: v1
  kind: Service
  metadata:
    name: yoco-frontend-prod
    namespace: default
  spec:
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 4000
      - name: https
        protocol: TCP
        port: 443
        targetPort: 4000
    selector:
      app: yoco-frontend-prod
    sessionAffinity: None
    type: NodePort
