kubernetes/yoco-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - qa.yocoservices.com
    secretName: qa-yocoservices-com
  rules:
  - host: qa.yocoservices.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: yoco-frontend-dev
          servicePort: 4001
